# modgen2d

./: .coverage  .gitignore  .readthedocs.yaml  LICENSE.txt  Notebook_Detailed_main_seperate..ipynb  Paper_Figures.ipynb  README.md  model_gen_1d.ipynb  model_gen_2d-Copy1.ipynb  model_gen_2d.ipynb  model_gen_2d_Lithological_Domain_UnitTest.ipynb  model_gen_2d_RandomGenerator.ipynb  model_gen_2d_UnitTests.ipynb  pyproject.toml  unit_tests-Copy1.ipynb  unit_tests.ipynb
.ipynb_checkpoints/: Notebook_Detailed_main_seperate.-checkpoint.ipynb  Paper_Figures-checkpoint.ipynb  model_gen_1d-checkpoint.ipynb  model_gen_2d-checkpoint.ipynb  model_gen_2d_Lithological_Domain_UnitTest-Copy1-checkpoint.ipynb  model_gen_2d_Lithological_Domain_UnitTest-checkpoint.ipynb  model_gen_2d_UnitTests-checkpoint-checkpoint.ipynb  model_gen_2d_UnitTests-checkpoint.ipynb  unit_tests-Copy1-checkpoint.ipynb  unit_tests-checkpoint.ipynb
docs/: conf.py  geomodgen2d.rst  how_to.txt  index.rst  installation.rst  licensing.rst  modgen2d.rst
geomodgen2d/: __init__.py  boundary_creator.py  discretized_domain2d.py  discretized_interfaces2d.py  discretized_interfaces2d_from_dict.py  domain2d.py  features_config.py  general_functions.py  generated_model2d.py  generated_model2d_collection.py  generated_profiles2d.py  global_soil_interface_config.py  interfaces_creator2d.py  lithological_domain2d.py  lithological_domain2d_collection.py  load_generated_model2d_from_hdf5.py  main_properties.py  main_property_each.py  material_domain2d.py  material_domain3d.py  material_properties.py  material_property_each.py  meta_class.py  metadata.py  obstruction2d.py  obstruction_2d.py  random_generators.py  rough_interface_creator2d.py  spatial_simulation2d.py  spatial_simulator2d.py  units_config.py  utils_2d.py  utils_3d_functions.py
modgen2d/: __init__.py  _plots.py  discretized_domain2d.py  discretized_interfaces2d.py  discretized_interfaces2d_from_dict.py  features_config.py  general_functions.py  general_functions_deprecated.py  global_soil_interface_config.py  length_config.py  load_generated_model2d_from_hdf5.py  main_properties.py  main_property_each.py  meta_class.py  metadata.py  model_resolution.py  obstruction2d.py  property_distribution.py  random_generators.py  rough_interface_creator2d.py  spatial_simulator2d.py  units_config.py
test/: test_boundary_creator.py  test_domain2d.py  test_features_config.py  test_general_functions.py  test_interface_main.py  test_interface_rough_generator.py  test_interface_smoother_depth_updater.py  test_interfaces2d.py  test_interfaces2d_from_dict.py  test_length_config.py  test_lithological_domain2d.py  test_lithological_domain_base.py  test_lithological_domain_collection.py  (+20 more)
(+174 files in other folders)
