[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modgen2d"
version = "0.1.0"
description = "Generating 2D models."
readme = "README.md"
requires-python = ">=3.12"

authors = [{ name = "Sanish Bhochhibhoya", email = "sbhochhi@vt.edu" }]
license = { text = "MIT" }

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "h5py",
]

# Optional dev dependencies
[project.optional-dependencies]
dev = ["pytest", "sphinx", "coverage"]

# Random placeholder as not public yet.
[project.urls]
Homepage = "https://randomfornow.com/modgen2d"
Issues = "https://randomfornow.com/modgen2d/issues"
