[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modgen2d"
version = "1.0.0"
description = "Advancing Subsurface Simulation with ModGen2D: An Open-Source Python Package for the Stochastic Generation of Complex Geologic Models"
readme = "README.md"
requires-python = ">=3.11"

authors = [{ name = "Sanish Bhochhibhoya", email = "sbhochhi@vt.edu" }]
license = { text = "GPL-3.0-only" }

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "h5py",
]

# Optional dev dependencies
[project.optional-dependencies]
dev = ["pytest", "sphinx", "sphinx-rtd-theme", "coverage"]

[project.urls]
Homepage = "https://github.com/geoimaging/modgen2d"
Repository = "https://github.com/geoimaging/modgen2d"
Issues = "https://github.com/geoimaging/modgen2d/issues"
